src/test/results/deca/codegen/invalid/Objet/NullDereferencing.res
  ** IMA ** ERREUR ** Ligne 32 : 
    CMP avec op1 : adresse memoire et op2 : indefini
